[metadata]
name = k8s-gitops
long_description = file: README.md
long_description_content_type = text/markdown
prodid = github.com/allenporter/k8s-gitops
url = https://github.com/allenporter/k8s-gitops
author = Allen Porter
author_email = allen.porter@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >= 3.10
install_requires =
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
exclude =
    tests
    tests.*
